# Resume-Tailor

./: README.md
backend/: requirements.txt
backend/flask_app/: app.py  celery_worker.py  crew_wrapper.py  debug_env.py  latex_compile.py  supabase_upload.py
backend/resume_tailor/: README.md  pyproject.toml  tailored_resume.tex
backend/resume_tailor/db/: chroma.sqlite3
backend/resume_tailor/src/resume_tailor/: crew.py  main.py
backend/resume_tailor/src/resume_tailor/config/: agents.yaml  tasks.yaml
backend/resume_tailor/src/resume_tailor/tools/: latex_to_pdf_tool.py  parse_resume.py  pdf_search_tool.py
frontend/: package-lock.json  package.json  proxy.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/api/job-status/: route.ts
frontend/app/api/logout/: route.ts
frontend/app/api/profile/: route.ts
frontend/app/api/resumes/: route.ts
frontend/app/api/start-job/: route.ts
frontend/app/auth/callback/: route.ts
frontend/app/dashboard/: page.tsx
frontend/app/dashboard/history/: page.tsx
frontend/app/dashboard/loading/: page.tsx
frontend/app/dashboard/profile/: page.tsx
frontend/app/dashboard/result/: page.tsx
frontend/app/sign-in/: page.tsx
frontend/app/sign-up/: page.tsx
frontend/components/: auth-layout.tsx  dashboard-sidebar.tsx  latex-viewer.tsx  loading-animation.tsx  profile-settings.tsx  result-preview-client.tsx  result-preview.tsx  resume-history.tsx  resume-tailor-form.tsx  sign-in-form.tsx  sign-up-form.tsx
frontend/lib/: supabaseServer.ts
(+5 files in other folders)
