[project]
name = "resume_tailor"
version = "0.1.0"
description = "resume_tailor using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[openai,tools]>=0.175.0,<1.0.0",
]

[project.scripts]
resume_tailor = "resume_tailor.main:run"
run_crew = "resume_tailor.main:run"
train = "resume_tailor.main:train"
replay = "resume_tailor.main:replay"
test = "resume_tailor.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
